<resources>
    <string name="add_course_date_mode">Date Mode</string>
    <string name="add_course_date_mode_notice">Even in date mode, the result is stored by week number. Please make sure the semester start date or current week is configured correctly.</string>
    <string name="add_course_least_one_week">At least one week is needed.</string>
    <string name="add_course_lesson">Lesson %1$d</string>
    <string name="course_time_example">Monday, lessons 1-2</string>
    <string name="add_course_start_time">Class starts</string>
    <string name="add_course_end_time">Class ends</string>
    <string name="add_course_invalid_time_title">Invalid time range</string>
    <string name="add_course_invalid_time_message">The end time must be later than the start time. This change has been canceled.</string>
    <string name="add_course_title_select_date_range">Select Date Range</string>
    <string name="add_course_title_select_time">Day &amp; Period</string>
    <string name="add_course_title_select_week">Select Weeks</string>
    <string name="add_course_week_mode">Week Mode</string>
    <string name="all_weeks">All</string>
    <string name="app_name">OpenWakeUp</string>
    <string name="cancel">Cancel</string>
    <string name="color_hex_prefix" translatable="false">#</string>
    <string name="classroom_optional">Classroom (Optional)</string>
    <string name="course_detail_delete">Delete</string>
    <string name="course_detail_edit">Edit</string>
    <string name="course_name">Course Name</string>
    <string name="credit">Credit</string>
    <string name="credit_optional">Credit (Optional)</string>
    <string name="credit_invalid">Please enter a valid non-negative credit value</string>
    <string name="select_course_color">Course color</string>
    <string name="select_course_color_desc">Color used by this course card on the schedule</string>
    <string name="clear_input">Clear</string>
    <string name="selected_week_list">Weeks %1$s</string>
    <string name="even">Even</string>
    <string name="exit">Exit</string>
    <string name="export_as_backup">Export backup</string>
    <string name="export_as_ical_file">Export as ICS</string>
    <string name="export_tips">Choose the folder to export.
DO NOT modify the file extension.</string>
    <string name="import_dialog_from_backup">From backup</string>
    <string name="backup_export_title">Export backup</string>
    <string name="backup_import_title">Import from backup</string>
    <string name="backup_schedules_header">Schedules</string>
    <string name="backup_time_tables_header">Timetables</string>
    <string name="backup_settings_header">Settings</string>
    <string name="backup_schedule_item">Schedule</string>
    <string name="backup_time_table_item">Timetable</string>
    <string name="backup_schedule_uses_time_table">Timetable: %1$s</string>
    <plurals name="backup_time_table_nodes">
        <item quantity="one">%1$d period</item>
        <item quantity="other">%1$d periods</item>
    </plurals>
    <string name="backup_global_settings">Global settings</string>
    <string name="backup_global_settings_desc">Theme, language, date format, reminders and global appearance</string>
    <string name="backup_widget_settings">Widget settings</string>
    <string name="backup_widget_settings_desc">Global widget appearance, text, colors and private images</string>
    <string name="backup_no_schedules">No schedules available</string>
    <string name="backup_no_time_tables">No timetables available</string>
    <string name="backup_select_file">Select backup file</string>
    <string name="backup_file_unselected">No .openwakebak file selected</string>
    <string name="backup_import_behavior_title">Import behavior</string>
    <string name="backup_import_behavior_desc">Schedules and timetables will be added to the current database; global settings and widget settings will overwrite their current values.</string>
    <string name="backup_auto_selected_time_table">The related timetable was selected automatically</string>
    <string name="backup_auto_deselected_schedule">The related schedule was deselected automatically</string>
    <string name="backup_export_action">Export selected backup data</string>
    <string name="backup_import_action">Import selected backup data</string>
    <string name="backup_confirm_import_title">Confirm import</string>
    <string name="backup_confirm_import_message">Add %1$d schedules and %2$d timetables. Settings to overwrite: %3$s.</string>
    <string name="backup_settings_none">None</string>
    <string name="backup_settings_global">Global settings</string>
    <string name="backup_settings_widget">Widget settings</string>
    <string name="backup_settings_both">Global and widget settings</string>
    <string name="backup_export_success">Backup exported</string>
    <string name="backup_import_success">Imported %1$d schedules and %2$d timetables</string>
    <string name="backup_error_open">Unable to open the selected file</string>
    <string name="backup_error_format">The selected file is not a valid OpenWakeUp backup</string>
    <string name="backup_error_version">This backup format version is not supported</string>
    <string name="backup_error_database_version">The backup database version does not match this app</string>
    <string name="backup_error_integrity">Backup integrity verification failed</string>
    <string name="backup_error_unsafe">The backup contains an unsafe or oversized entry</string>
    <string name="backup_error_selection">Select at least one valid item to continue</string>
    <string name="backup_error_reference">The backup contains an invalid data reference</string>
    <string name="backup_error_image">The backup contains an invalid image</string>
    <string name="backup_error_write">Unable to write backup data</string>
    <string name="import_dialog_from_eas">Import from EAS</string>
    <string name="import_dialog_from_excel">From CSV</string>
    <string name="import_dialog_from_file">Import from file</string>
    <string name="import_dialog_from_html">From HTML</string>
    <string name="import_dialog_from_ics">From ICS</string>
    <string name="main_back_to_current_week">Back to current week</string>
    <string name="main_create_new_schedule">New schedule</string>
    <string name="main_manage_schedules">Manage</string>
    <string name="main_modify_current_week">Set current week</string>
    <string name="main_sheet_title_multi_schedules">Schedules</string>
    <string name="main_sheet_title_week">Week</string>
    <string name="menu_copy">Copy</string>
    <string name="note">Note</string>
    <string name="note_optional">Note (Optional)</string>
    <string name="odd">Odd</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="schedule_name_cant_empty">The name can not be empty. &gt;_&lt;</string>
    <string name="semester_ended">Semester ended</string>
    <string name="semester_not_start_yet">Not started</string>
    <string name="setting_auto_launch">Allow background run &amp; auto-start</string>
    <string name="setting_background">Schedule background</string>
    <string name="setting_blank" />
    <string name="setting_blank_area">Add space below the schedule</string>
    <string name="setting_class_time">Class time</string>
    <string name="setting_clear_webview_cache">Clear built-in browser cache</string>
    <string name="setting_course_text_color">Course text color</string>
    <string name="setting_course_text_size">Course text size</string>
    <string name="setting_current_week">Current week</string>
    <string name="setting_dynamic_colors">Dynamic colors based on wallpaper</string>
    <string name="setting_empty_view">Customize empty view</string>
    <string name="setting_header_color">Interface text color</string>
    <string name="setting_header_text_size">Header text size</string>
    <string name="setting_ingore_battery_opt">Ignore battery optimization</string>
    <string name="setting_item_alpha">Course cell opacity</string>
    <string name="setting_item_grid">Course cells</string>
    <string name="setting_item_height">Course cell height</string>
    <string name="setting_item_radius">Cell corner radius</string>
    <string name="setting_item_show_location">Show location in cells</string>
    <string name="setting_item_show_teacher">Show teacher in cells</string>
    <string name="setting_item_show_time">Show time in cells</string>
    <string name="setting_manage_course">Manage added courses</string>
    <string name="setting_modify_schedule_by_date">Transferring classes between dates</string>
    <string name="setting_nodes">Lessons per day</string>
    <string name="setting_other">Other</string>
    <string name="setting_pin_appwidget">Pin schedule to home screen</string>
    <string name="setting_resize_widget">How to resize the widget?</string>
    <string name="setting_schedule_appearance">Schedule appearance</string>
    <string name="setting_schedule_config">Schedule data</string>
    <string name="setting_schedule_config_default">Use as default schedule config</string>
    <string name="setting_default_configuration">Default configuration</string>
    <string name="setting_schedule_name">Schedule name</string>
    <string name="setting_show_grid">Show grid lines</string>
    <string name="setting_show_other_week">Show other-week courses</string>
    <string name="setting_show_sat">Show Saturday</string>
    <string name="setting_show_sun">Show Sunday</string>
    <string name="setting_show_time_bar">Show time in lesson column</string>
    <string name="setting_stroke_color">Cell stroke color</string>
    <string name="setting_term_start_date">First day of week 1</string>
    <string name="setting_theme">Appearance</string>
    <string name="setting_weeks">Weeks in semester</string>
    <string name="setting_widget_bg">Widget background</string>
    <string name="setting_widget_global">General</string>
    <string name="setting_widget_header_area">Header area</string>
    <string name="setting_widget_header_text_color">Header color</string>
    <string name="setting_widget_show_bg">Show widget background</string>
    <string name="setting_widget_show_button">Show action buttons</string>
    <string name="setting_widget_show_color">Show color blocks</string>
    <string name="setting_widget_show_date">Show date title</string>
    <string name="setting_widget_show_header_area">Show header area</string>
    <string name="setting_widget_showing_schedule">The schedule to be shown</string>
    <string name="share_schedule_online">Share schedule online</string>
    <string name="title_add_course">Add Course</string>
    <string name="widget_preview_title">Schedule</string>
    <string name="widget_preview_short_date" translatable="false">3.26</string>
    <string name="widget_preview_week">Week 1</string>
    <string name="widget_preview_today">Today</string>
    <string name="widget_preview_tomorrow">Tomorrow</string>
    <string name="back">Back</string>
    <string name="add_time">Add time</string>
    <string name="html_import">Import from an HTML file</string>
    <string name="no_tables_empty">No schedules yet</string>
    <string name="widget_empty_today">No classes today</string>
    <string name="time_start_example" translatable="false">08:30</string>
    <string name="time_end_example" translatable="false">09:15</string>
    <string name="time_range_separator" translatable="false">-</string>
    <string name="title_multi_table_manage">Manage schedules</string>
    <string name="manage_tip_view">Tap a card to view its courses</string>
    <string name="manage_tip_drag">Long-press and drag to reorder</string>
    <string name="import_tap">Tap to import</string>
    <string name="widget_empty_tomorrow">No classes tomorrow</string>
    <string name="widget_weekday_short_6">Sat</string>
</resources>