<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ms_delete_24"
        android:title="@string/course_detail_delete"
        app:iconTint="?attr/colorError"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_copy"
        android:icon="@drawable/ms_content_copy_24"
        android:title="@string/menu_copy"
        app:iconTint="?attr/colorPrimary"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ms_edit_24"
        android:title="@string/course_detail_edit"
        app:iconTint="?attr/colorPrimary"
        app:showAsAction="ifRoom" />
</menu>
