<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:minWidth="280dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/add_course_title_select_week"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_date_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/add_course_date_mode"
            android:textColor="?attr/colorPrimary" />
    </LinearLayout>

    <com.openwakeup.schedule.core.designsystem.component.SelectedRecyclerView
        android:id="@+id/rv_week"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:orientation="vertical" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_all"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingHorizontal="12dp"
            android:text="@string/all_weeks" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_type1"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingHorizontal="12dp"
            android:text="@string/odd" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_type2"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingHorizontal="12dp"
            android:text="@string/even" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/DialogButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            style="@style/DialogButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>
