<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/background"
    style="@style/Widget.AppWidget.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:theme="@style/Theme.AppWidget.AppWidgetContainerParent">

    <LinearLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_schedule_name"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLength="12"
            android:maxLines="1"
            android:text="@string/widget_preview_title"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_date"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/widget_preview_short_date"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_week_count"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/widget_preview_week"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_week"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_weekday_short_6"
            android:textColor="?android:attr/colorAccent"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_title"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/widget_preview_today"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/widget_preview_tomorrow"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_title"
        android:layout_marginTop="4dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ListView
                android:id="@+id/lv_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="#00000000"
                android:dividerHeight="8dp"
                android:scrollbars="none" />

            <FrameLayout
                android:id="@+id/empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:id="@+id/empty_image_today"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/empty_text_today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/widget_empty_today"
                    android:textSize="11sp" />
            </FrameLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:alpha="0.5"
            android:background="?android:attr/textColorSecondary" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ListView
                android:id="@+id/lv_course_next_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="#00000000"
                android:dividerHeight="8dp"
                android:scrollbars="none" />

            <FrameLayout
                android:id="@+id/empty_next_day"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:id="@+id/empty_image_next_day"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/empty_text_next_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/widget_empty_tomorrow"
                    android:textSize="11sp" />
            </FrameLayout>
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>
